# race_stack

./: .gitignore  .gitmodules  README.md  agent_final.pt  autodrive_online_async_roboracer.yaml  calibrate.py  deadman_switch.py  f1tenth_to_autodrive_bridge.py  low_voltage_shutdown.py  racing_agent.py  rc_teleop.py  roboracer_map.pgm  roboracer_map.yaml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/AutoDRIVE/: Dockerfile  devcontainer.json
.devcontainer/ROS/: Dockerfile
autodrive_bridge/: package.xml  setup.cfg  setup.py
autodrive_bridge/autodrive_bridge/: autodrive_bridge.py
autodrive_bridge/launch/: sim.launch.py
cartographer/config/: roboracer_cartographer.lua
cartographer/launch/: cartographer_launch.py  cartographer_replay.launch.py
disparity_extender/: package.xml  setup.cfg  setup.py
disparity_extender/disparity_extender/: .disparity_extender.py.swp  disparity_extender.py
disparity_extender/launch/: disparity_extender.launch.py
disparity_extender/test/: test_copyright.py  test_flake8.py  test_mypy.py  test_pep257.py
eval/: slam_eval.py
pure_pursuit/: package.xml  setup.cfg  setup.py
pure_pursuit/launch/: pure_pursuit.launch.py
pure_pursuit/pure_pursuit/: pure_pursuit.py
rc_teleop/: package.xml  setup.cfg  setup.py
rc_teleop/launch/: rc_teleop.launch.py
rc_teleop/rc_teleop/: rc_teleop.py
roboracer_slam/: package.xml  setup.cfg  setup.py
safety_node/: package.xml
safety_node/safety_node/: safety_node.py
warporacer_node/: package.xml  setup.cfg  setup.py
(+6 files in other folders)
